--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
         <div class="row">
             <div class="one-half column" style="margin-top: 3%">
                 <h5>A blog about gaming operations</h5>
-                <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to
-                    add some
-                    content!</p>
+                <p>I write about the daily tribulations, successes and
+                    frustrations of those folks responsible to run daily casino operations, while delivering a great
+                    gaming and entertaining experience to guests and player alike.</p>
             </div>
         </div>
     </div>
