--- a/about.html
+++ b/about.html
@@ -64,10 +64,7 @@
                 <h5>Hi, my name is <a href="https://www.linkedin.com/in/juancsaa" target="_blank" rel="noopener">Juan C.
                         Saa</a></h5>
                 <p>I am a Casino executive with almost two decades of experience running casino slot operations and
-                    performance analytics, In this space, I write about the daily tribulations, successes and
-                    frustrations of those folks responsible to run daily casino operations, while delivering a great
-                    gaming and entertaining experience to guests and player alike within the confinements of the most
-                    strict regulations known to any industry.</p>
+                    performance analytics, and, this will be my virtual sandbox, where I will be refelcting over events and situations that most of my casino gaming colleagues would identify as recurrent pain points.</p>
                 <p>My main goal is to reflect how many a times, me make our lives harder</p>
                 <p>Please, head over to the main <a href="/blog.html"> blog</a> page, where I will discuss and
                     reflect
