--- a/about.html
+++ b/about.html
@@ -64,13 +64,11 @@
                 <h5>Hi, my name is <a href="https://www.linkedin.com/in/juancsaa" target="_blank" rel="noopener">Juan C.
                         Saa</a></h5>
                 <p>I am a Casino executive with almost two decades of experience running casino slot operations and
-                    performance analytics, and, this will be my virtual sandbox, where I will be refelcting over events and situations that most of my casino gaming colleagues would identify as recurrent pain points.</p>
-                <p>My main goal is to reflect how many a times, me make our lives harder</p>
-                <p>Please, head over to the main <a href="/blog.html"> blog</a> page, where I will discuss and
-                    reflect
-                    over a different topic every
-                    two weeks, while sometimes I would venture to propose simple solutions, I encourage my readers to
-                    chime in and contribute your proven best practices in an effort to help those in the trenches.</p>
+                    performance analytics, and, this will be my virtual sandbox, where I will be reflecting over events and situations that most of my casino gaming colleagues would identify as recurrent pain points.</p>
+                <p>My main goal is to search for, propose and share simple solutions to help us work smarter rather than harder.</p>
+                <p>Please, head over to the main <a href="/blog.html"> blog</a> page, where I will be pondering about a different topic every
+                    two weeks, while sometimes I would venture to propose mildly opinionated alternatives, I encourage you, my reader to
+                    chime in and contribute your proven best practices in an effort to colectively help those in the trenches.</p>
             </div>
         </div>
     </div>
