--- a/post-1.html
+++ b/post-1.html
@@ -50,7 +50,7 @@
             <article>
                 <main>
                     <h5>Unconventional perspective</h5>
-<p>William Wallace, Winston Churchill, Gandhi, Steve Jobs… All of these leaders fit the description of unconventional thinkers, and here are 7 best practices of their unconventional way of earning trust, loyal following and effectiveness on accomplishing their goals.</p>
+<p>William Wallace, Winston Churchill, Gandhi, Jacinda Ardern, Malala Yousafzai… All of these leaders fit the description of unconventional thinkers, and here are 7 best practices of their unconventional way of earning trust, loyal following and effectiveness on accomplishing their goals.</p>
 <ol>
 <li>
 <p>Take the blame - If there is a blame to be had, take it on. If there is a credit to be given, give it away to others. It’s a rare behavior that truly creates trust and loyalty; Always protect your team and praise them when it comes to owning up to their accomplishments.</p>
