--- a/contact.html
+++ b/contact.html
@@ -109,6 +109,7 @@
                 </div>
             </form>
             <!-- End form -->
+            <script src="form.js"></script>
         </body>
 
         </html>
