--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
             <!-- CSS -->
             <link rel="stylesheet" href="css/global.css">
             <!-- Favicon -->
-            <link rel="icon" type="image/png" href="images/favicon.png">
+            <link rel="icon" type="image/x-icon" href="images/favicon.ico">
         </head>
 
         <body>
