--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <link rel="stylesheet" href="css/skeleton.css">
             <link rel="stylesheet" href="css/style.css">
             <!-- Favicon -->
-            <link rel="icon" type="image/png" href="images/favicon.png">
+            <link rel="icon" type="image/x-icon" href="images/favicon.ico">
         </head>
 
         <body>
