--- a/post-1.html
+++ b/post-1.html
@@ -55,10 +55,10 @@
 <div class="container">
     <div class="row">
         <div class="one-half column" style="margin-top: 3%">
-            <article>
+            <main>
                 <h4 style="text-align: center">Unconventional perspective</h4>
                 <h6 style="text-align: center">Published 03-10-1965</h6>
-                <main>
+                <article>
                     <p>William Wallace, Winston Churchill, Gandhi, Jacinda Ardern, Malala Yousafzai… All of these leaders fit the description of unconventional thinkers, and here are 7 best practices of their unconventional way of earning trust, loyal following and effectiveness on accomplishing their goals.</p>
 <p><strong>Take the blame</strong> - If there is a blame to be had, take it on. If there is a credit to be given, give it away to others. It’s a rare behavior that truly creates trust and loyalty; Always protect your team and praise them when it comes to owning up to their accomplishments.</p>
 <p><strong>Forget about conventional wisdom</strong> - The more you say “it’s never been done before&quot;, the more excited your team gets about changing that fact. It’s hard to manage a team of rebels, but that’s exactly what’s needed to change the norm, to challenge the old, and invent the new.</p>
@@ -68,8 +68,8 @@
 <p><strong>Encourage reverse mentorship</strong> - Be sharp enough to realize that times change and that there are things younger professionals are just smarter about and posses critical knowledge for innovation.</p>
 <p><strong>Disappear, disconnect and reflect</strong> - Change the routine, learn something outside your professional interest. Create white space in which reflection thrives. Know your limits, and those of your team, know when their energy levels need recharging.</p>
 
-                </main>
-            </article>
+                </article>
+            </main>
         </div>
     </div>
 </div>
@@ -80,12 +80,14 @@
 <div class="container" style="color: #8C7F68;">
     <div class="row">
         <div class="one-half column" style="margin-top: 3%">
-            <p align="center">&copy; Copyright 2009-2023, Juan C. Saa</p>
-            <p align="center">
-                Built with <a href="https://www.11ty.dev" target="_blank" rel="noopener">11ty</a>,
-                <a href="https://mozilla.github.io/nunjucks/" target="_blank" rel="noopener">Nunjucks</a>, and <a
-                    href="http://getskeleton.com/" target="_blank" rel="noopener">Skeleton CSS</a>
-            </p>
+            <span style="text-align: center">
+                <p>&copy; Copyright 2009-2023, Juan C. Saa</p>
+                <p>
+                    Built with <a href="https://www.11ty.dev" target="_blank" rel="noopener">11ty</a>,
+                    <a href="https://mozilla.github.io/nunjucks/" target="_blank" rel="noopener">Nunjucks</a>, and <a
+                        href="http://getskeleton.com/" target="_blank" rel="noopener">Skeleton CSS</a>
+                </p>
+            </span>
         </div>
     </div>
 </div>
