--- a/404.html
+++ b/404.html
@@ -72,14 +72,12 @@
 <div class="container" style="color: #8C7F68;">
     <div class="row">
         <div class="one-half column" style="margin-top: 3%">
-            <span style="text-align: center">
-                <p>&copy; Copyright 2009-2023, Juan C. Saa</p>
-                <p>
-                    Built with <a href="https://www.11ty.dev" target="_blank" rel="noopener">11ty</a>,
-                    <a href="https://mozilla.github.io/nunjucks/" target="_blank" rel="noopener">Nunjucks</a>, and <a
-                        href="http://getskeleton.com/" target="_blank" rel="noopener">Skeleton CSS</a>
-                </p>
-            </span>
+            <p style="text-align: center">&copy; Copyright 2009-2023, Juan C. Saa</p>
+            <p style="text-align: center">Built with <a href="https://www.11ty.dev" target="_blank"
+                    rel="noopener">11ty</a>,
+                <a href="https://mozilla.github.io/nunjucks/" target="_blank" rel="noopener">Nunjucks</a>, and <a
+                    href="http://getskeleton.com/" target="_blank" rel="noopener">Skeleton CSS</a>
+            </p>
         </div>
     </div>
 </div>
