--- a/404.html
+++ b/404.html
@@ -5,6 +5,7 @@
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
     <meta name="title" content="The average bet - Oops! Not all who wander are lost">
+    <title>The average bet</title>
     <meta name="description" content="404 Page not found">
     <meta name="author" content="Juan C. Saa">
     <!-- Mobile Specific Meta -->
