--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
     <meta name="title" content="The average bet - About">
+    <title>The average bet</title>
     <meta name="description" content="about_page">
     <meta name="author" content="Juan C. Saa">
     <!-- Mobile Specific Meta -->
