--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,7 @@
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
     <meta name="title" content="The average bet - Blog">
+    <title>The average bet</title>
     <meta name="description" content="The blog page">
     <meta name="author" content="Juan C. Saa">
     <!-- Mobile Specific Meta -->
