--- a/post-1.html
+++ b/post-1.html
@@ -5,6 +5,7 @@
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
     <meta name="title" content="The average bet - Unconventional perspective">
+    <title>The average bet</title>
     <meta name="description" content="post-1">
     <meta name="author" content="Juan C. Saa">
     <!-- Mobile Specific Meta -->
@@ -55,10 +56,9 @@
 <div class="container">
     <div class="row">
         <div class="one-half column" style="margin-top: 3%">
-            <main>
-                <h4 style="text-align: center">Unconventional perspective</h4>
-                <h6 style="text-align: center">03-10-1965</h6>
-                <p>William Wallace, Winston Churchill, Gandhi, Jacinda Ardern, Malala Yousafzai… All of these leaders fit the description of unconventional thinkers, and here are 7 best practices of their unconventional way of earning trust, loyal following and effectiveness on accomplishing their goals.</p>
+            <h4 style="text-align: center">Unconventional perspective</h4>
+            <h6 style="text-align: center">03-10-1965</h6>
+            <p>William Wallace, Winston Churchill, Gandhi, Jacinda Ardern, Malala Yousafzai… All of these leaders fit the description of unconventional thinkers, and here are 7 best practices of their unconventional way of earning trust, loyal following and effectiveness on accomplishing their goals.</p>
 <p><strong>Take the blame</strong> - If there is a blame to be had, take it on. If there is a credit to be given, give it away to others. It’s a rare behavior that truly creates trust and loyalty; Always protect your team and praise them when it comes to owning up to their accomplishments.</p>
 <p><strong>Forget about conventional wisdom</strong> - The more you say “it’s never been done before&quot;, the more excited your team gets about changing that fact. It’s hard to manage a team of rebels, but that’s exactly what’s needed to change the norm, to challenge the old, and invent the new.</p>
 <p><strong>Mistakes do not equate to failures</strong> - What really matters is the response to those mistakes. Mistakes teach, while the notion of “failure” erodes confidence. Trailblazing pioneers stumble while shaping new paths. And that’s okay.</p>
@@ -67,7 +67,6 @@
 <p><strong>Encourage reverse mentorship</strong> - Be sharp enough to realize that times change and that there are things younger professionals are just smarter about and posses critical knowledge for innovation.</p>
 <p><strong>Disappear, disconnect and reflect</strong> - Change the routine, learn something outside your professional interest. Create white space in which reflection thrives. Know your limits, and those of your team, know when their energy levels need recharging.</p>
 
-            </main>
         </div>
     </div>
 </div>
