--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
     <meta name="title" content="The average bet - The average bet">
+    <title>The average bet</title>
     <meta name="description" content="homepage">
     <meta name="author" content="Juan C. Saa">
     <!-- Mobile Specific Meta -->
