--- a/404.html
+++ b/404.html
@@ -48,17 +48,19 @@
 <!-- End header -->
     </header>
     <main>
-        <div class="container" id="box">
-            <div class="row">
-                <div class="twelve columns" style="margin-top: 1%">
-                    
+        <!-- Content layout -->
+<div class="container" id="box">
+    <div class="row">
+        <div class="twelve columns" style="margin-top: 1%">
+            
 <!-- 404 Page Layout -->
 <h5>Oops! Not all who wander are lost</h5>
 <p>Page not Found, <a href="/">Please go back home</a>.</p>
 <!-- End of document -->
-                </div>
-            </div>
         </div>
+    </div>
+</div>
+<!-- End content -->
     </main>
     <footer>
         <!-- Footer layout -->
