--- a/about.html
+++ b/about.html
@@ -49,10 +49,11 @@
 <!-- End header -->
     </header>
     <main>
-        <div class="container" id="box">
-            <div class="row">
-                <div class="twelve columns" style="margin-top: 1%">
-                    
+        <!-- Content layout -->
+<div class="container" id="box">
+    <div class="row">
+        <div class="twelve columns" style="margin-top: 1%">
+            
 <!-- Primary Page Layout -->
 <h5>Hi, my name is <a href="https://www.linkedin.com/in/juancsaa" target="_blank" rel="noopener">Juan C.
         Saa</a></h5>
@@ -68,9 +69,10 @@
     two weeks, while sometimes I would venture to propose simple solutions, I encourage my readers to
     chime in and contribute your proven best practices in an effort to help those in the trenches.</p>
 <!-- End Document -->
-                </div>
-            </div>
         </div>
+    </div>
+</div>
+<!-- End content -->
     </main>
     <footer>
         <!-- Footer layout -->
