--- a/index.html
+++ b/index.html
@@ -49,19 +49,21 @@
 <!-- End header -->
     </header>
     <main>
-        <div class="container" id="box">
-            <div class="row">
-                <div class="twelve columns" style="margin-top: 1%">
-                    
+        <!-- Content layout -->
+<div class="container" id="box">
+    <div class="row">
+        <div class="twelve columns" style="margin-top: 1%">
+            
 <!-- Primary Page Layout -->
 <h5>A blog about casino gaming operations</h5>
 <p>Introduction - I write about the daily tribulations, successes and
     frustrations of those folks responsible to run daily casino operations, while delivering a great
     gaming and entertaining experience to guests and player alike.</p>
 <!-- End Document -->
-                </div>
-            </div>
         </div>
+    </div>
+</div>
+<!-- End content -->
     </main>
     <footer>
         <!-- Footer layout -->
