--- a/post-1.html
+++ b/post-1.html
@@ -48,11 +48,11 @@
 <!-- End header -->
     </header>
     <main>
-        <div class="container" id="box">
-            <div class="row">
-                <div class="twelve columns" style="margin-top: 1%">
-                    
-<!-- Blog-post layout -->
+        <!-- Content layout -->
+<div class="container" id="box">
+    <div class="row">
+        <div class="twelve columns" style="margin-top: 1%">
+            <!-- Blog-post layout -->
 <h4 style="text-align: center">Unconventional perspective</h4>
 <h6 style="text-align: center"><code>03-10-1965</code></h6>
 <p>William Wallace, Winston Churchill, Gandhi, Jacinda Ardern, Malala Yousafzai… All of these leaders fit the description of unconventional thinkers, and here are 7 best practices of their unconventional way of earning trust, loyal following and effectiveness on accomplishing their goals.</p>
@@ -65,9 +65,10 @@
 <p><strong>Disappear, disconnect and reflect</strong> - Change the routine, learn something outside your professional interest. Create white space in which reflection thrives. Know your limits, and those of your team, know when their energy levels need recharging.</p>
 
 <!-- End blog-post -->
-                </div>
-            </div>
         </div>
+    </div>
+</div>
+<!-- End content -->
     </main>
     <footer>
         <!-- Footer layout -->
